src/snapshots/tptp__tfx__tests__tfx_binary_formula.snap
---
source: src/tfx.rs
expression: parsed
---
Nonassoc(
    BinaryNonassoc {
        left: Unitary(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "p",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
        op: LRImplies,
        right: Unitary(
            Atomic(
                Plain(
                    Constant(
                        Constant(
                            Functor(
                                Lower(
                                    LowerWord(
                                        "q",
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    },
)
