src/snapshots/tptp__tfx__tests__tfx_binary_nonassoc.snap
---
source: src/tfx.rs
expression: parsed
---
BinaryNonassoc {
    left: Unitary(
        Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "p",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
    op: LRImplies,
    right: Unitary(
        Atomic(
            Plain(
                Constant(
                    Constant(
                        Functor(
                            Lower(
                                LowerWord(
                                    "q",
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        ),
    ),
}
