src/snapshots/tptp__tfx__tests__tfx_defined_atomic.snap
---
source: src/tfx.rs
expression: parsed
---
DefinedAtomic(
    Constant(
        DefinedConstant(
            DefinedFunctor(
                AtomicDefinedWord(
                    DollarWord(
                        LowerWord(
                            "defined",
                        ),
                    ),
                ),
            ),
        ),
    ),
)
