src/snapshots/tptp__tfx__tests__tfx_defined_infix.snap
---
source: src/tfx.rs
expression: parsed
---
DefinedInfix {
    left: Variable(
        Variable(
            UpperWord(
                "X",
            ),
        ),
    ),
    op: DefinedInfixPred(
        InfixEquality,
    ),
    right: Variable(
        Variable(
            UpperWord(
                "Y",
            ),
        ),
    ),
}
