src/snapshots/tptp__tfx__tests__tfx_defined_plain.snap
---
source: src/tfx.rs
expression: parsed
---
Constant(
    DefinedConstant(
        DefinedFunctor(
            AtomicDefinedWord(
                DollarWord(
                    LowerWord(
                        "defined",
                    ),
                ),
            ),
        ),
    ),
)
