src/snapshots/tptp__tfx__tests__tfx_formula-3.snap
---
source: src/tfx.rs
expression: parsed
---
AtomTyping(
    Typing(
        Constant(
            Constant(
                Functor(
                    Lower(
                        LowerWord(
                            "c",
                        ),
                    ),
                ),
            ),
        ),
        Atomic(
            Variable(
                Variable(
                    UpperWord(
                        "A",
                    ),
                ),
            ),
        ),
    ),
)
