src/snapshots/tptp__tfx__tests__tfx_infix_unary.snap
---
source: src/tfx.rs
expression: parsed
---
InfixUnary {
    left: Variable(
        Variable(
            UpperWord(
                "X",
            ),
        ),
    ),
    op: InfixInequality,
    right: Variable(
        Variable(
            UpperWord(
                "Y",
            ),
        ),
    ),
}
