src/snapshots/tptp__tfx__tests__tfx_logic_formula-3.snap
---
source: src/tfx.rs
expression: parsed
---
Unary(
    Prefix(
        PrefixUnary {
            op: UnaryConnective,
            formula: Unitary(
                Atomic(
                    Plain(
                        Constant(
                            Constant(
                                Functor(
                                    Lower(
                                        LowerWord(
                                            "p",
                                        ),
                                    ),
                                ),
                            ),
                        ),
                    ),
                ),
            ),
        },
    ),
)
